--- a/mod2/css/styles.css
+++ b/mod2/css/styles.css
@@ -14,20 +14,20 @@
 }
 
 #title1 {
-  background-color: #5F6EA0;
+  background-color: #84E900;
   }
 
 #title2 {
-  background-color: #5F9EA0;
+  background-color: #00A876;
   }
 
 #title3 {
-  background-color: #9F8EA7;
+  background-color: #FFFC00;
   }
 
 #s {
   border: 3px solid black;
-  background-color: gray;
+  background-color: #E1FA71;
 }
 
 h1 {
