--- a/mod2/css/styles.css
+++ b/mod2/css/styles.css
@@ -1,7 +1,80 @@
+* {
+  box-sizing: border-box;
+  font-family: Helvetica;
+  color: black;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #F0E68C;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 15px;
+  font-size: 30px;
+}
+
+#p1 {
+    background-color: #84E900;
+    text-align: center;
+}
+#p2{
+    background-color: #00A876;
+    text-align: center;
+}
+#p3{
+    background-color: #FFFC00;
+    text-align: center;
+}
+
+p.content{
+    position: relative;
+    padding: 40px 20px 20px 20px;
+
+    margin: 0px;
+    overflow: auto; 
+}
+
+p.title {
+    position: absolute;
+    right: 0px;
+    margin: 0px;
+    padding: 0px 5px 0px 5px;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    font-size: 20px;
+    width: 30%;
+}
+
+.box {
+    position: relative;
+    background-color: azure;
+    border: 1px solid black;
+}
+
+.outside {
+    padding: 10px;
+}
+
+.row{
+    width: 100%;
+}
+
+
+
+/*
 
 * {
     box-sizing: border-box;
     font-family: Calibri;
+}
+
+body {
+    background-color: #F0E68C;
+    display: block;
+    margin: 8px;
 }
 
 #title1, #title2, #title3 {
@@ -25,9 +98,16 @@
   background-color: #FFFC00;
   }
 
+.outside {
+    padding: 10px;
+}
+
 #s {
   border: 3px solid black;
   background-color: #E1FA71;
+  position: relative;
+  overflow: auto;
+  display: block;
 }
 
 h1 {
@@ -42,6 +122,14 @@ h1 {
     padding: 10px;
 }
 
+.container {
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+}*/
 
 @media (min-width: 922px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
