--- a/mod3/css/styles.css
+++ b/mod3/css/styles.css
@@ -1,249 +1,89 @@
-* {
-  box-sizing: border-box;
-  font-family: Helvetica;
-  color: black;
-}
-
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #F0E68C;
+	font-family: 'Lato', sans-serif;
+	box-sizing: border-box;
 }
 
-h1 {
-  text-align: center;
-  margin-bottom: 15px;
-  font-size: 30px;
+header {
+	margin-bottom: 50px;
+	background-color: #999999;
 }
 
-#p1 {
-    background-color: #84E900;
-    text-align: center;
-}
-#p2{
-    background-color: #00A876;
-    text-align: center;
-}
-#p3{
-    background-color: #FFFC00;
-    text-align: center;
+.navbar {
+	border-bottom: 5px solid black;
+	background-color: #cccccc;
 }
 
-p.content{
-    position: relative;
-    padding: 40px 20px 20px 20px;
-
-    margin: 0px;
-    overflow: auto; 
+.container-fluid > .navbar-brand {
+	color: black;
+	font-size: 1em;
 }
 
-p.title {
-    position: absolute;
-    right: 0px;
-    margin: 0px;
-    padding: 0px 5px 0px 5px;
-    border-bottom: 1px solid black;
-    border-left: 1px solid black;
-    font-size: 20px;
-    width: 30%;
+.container-fluid > .navbar-brand:hover {
+	color: black;
 }
 
-.box {
-    position: relative;
-    background-color: azure;
-    border: 1px solid black;
+header nav div {
+	font-size: 30px
 }
 
-.outside {
-    padding: 10px;
+ul#nav-list.nav.navbar-nav.navbar-right {
+	clear: none;
 }
 
-.row{
-    width: 100%;
+#collapsable-nav a {
+	color: black;
+}
+
+div#main-title {
+	font-size: 2em;
+	margin-top: 20px;
+	margin-bottom: 30px;
+}
+
+p#food-title {
+	text-align: center;
+	font-size: 1.5em;
+
+}
+
+div#main-text {
+	color: black;
+	width: auto;
+	margin-left: 20px;
+	margin-right: 20px;
+	background-color: #999999;
 }
 
 
+@media (max-width: 767px){
+	div#main-text {
+		margin-left: 60px;
+		margin-right: 60px;
+	}
 
-/*
+	div#collapsable-nav {
+		padding: 0px;
+	}
 
-* {
-    box-sizing: border-box;
-    font-family: Calibri;
-}
+	ul#nav-list {
+		margin: 0px;
+	}
 
-body {
-    background-color: #F0E68C;
-    display: block;
-    margin: 8px;
-}
+	ul#nav-list > li {
+		text-align: center;
+		font-size: 0.5em;
+	}
 
-#title1, #title2, #title3 {
-  position: relative;
-  top: 0;
-  left: 70%;
-  width: 30%;
-  text-align: center;
-  border: 3px solid black;
-}
+	ul#nav-list:nth-child(1) {
+		border-top: 2px solid black;
+	}
 
-#title1 {
-  background-color: #84E900;
-  }
+	ul#nav-list > li > a {
+		padding: 0px;
+	}
 
-#title2 {
-  background-color: #00A876;
-  }
-
-#title3 {
-  background-color: #FFFC00;
-  }
-
-.outside {
-    padding: 10px;
-}
-
-#s {
-  border: 3px solid black;
-  background-color: #E1FA71;
-  position: relative;
-  overflow: auto;
-  display: block;
-}
-
-h1 {
-  text-align: center;
-}
-
-.row {
-  width: 100%;
-}
-
-#d {
-    padding: 10px;
-}
-
-.container {
-    border: none;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-}*/
-
-@media (min-width: 922px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-    float: left;
-  }
-  .col-sm-1 {
-    width: 8.33%;
-  }
-  .col-sm-2 {
-    width: 16.66%;
-  }
-  .col-sm-3 {
-    width: 25%;
-  }
-  .col-sm-4 {
-    width: 33.33%;
-  }
-  .col-sm-5 {
-    width: 41.66%;
-  }
-  .col-sm-6 {
-    width: 50%;
-  }
-  .col-sm-7 {
-    width: 58.33%;
-  }
-  .col-sm-8 {
-    width: 66.66%;
-  }
-  .col-sm-9 {
-    width: 74.99%;
-  }
-  .col-sm-10 {
-    width: 83.33%;
-  }
-  .col-sm-11 {
-    width: 91.66%;
-  }
-  .col-sm-12 {
-    width: 100%;
-  }
-}
-
-@media (max-width: 767px) {
-  .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
-    float: left;
-  }
-  .col-xs-1 {
-    width: 8.33%;
-  }
-  .col-xs-2 {
-    width: 16.66%;
-  }
-  .col-xs-3 {
-    width: 25%;
-  }
-  .col-xs-4 {
-    width: 33.33%;
-  }
-  .col-xs-5 {
-    width: 41.66%;
-  }
-  .col-xs-6 {
-    width: 50%;
-  }
-  .col-xs-7 {
-    width: 58.33%;
-  }
-  .col-xs-8 {
-    width: 66.66%;
-  }
-  .col-xs-9 {
-    width: 74.99%;
-  }
-  .col-xs-10 {
-    width: 83.33%;
-  }
-  .col-xs-11 {
-    width: 91.66%;
-  }
-  .col-xs-12 {
-    width: 100%;
-  }
+	hr {
+		border: 2px solid black;
+		margin: 0px;
+	}
 }
