--- a/Budget/css/style.css
+++ b/Budget/css/style.css
@@ -3,31 +3,35 @@
 	color: #B1A68C;
 }
 
- @media (min-width: 992px) {
-  	.name {
-    	width: 1000px;
-	}
-	.type {
-		width: 1000px;
-	}
-/*@media (max-width: 767px) {
-  	.name {
-    width: 100px;
-	}
-	.type {
-		width: 100px;
-	}*/
-}
-
 .start, .type {
-	margin: 10px 5px;
-	padding: 10px 5px;
+	margin: 5px 5px;
+	padding: 5px 5px;
 }
 
+.balance {
+	margin: 0px 0px 20px 20px;
+	padding: 0px 0px 0px 0px;
+}
 input {
 	width: 50px;
 }
-
 #balance {
   color: green;
+}
+@media (min-width: 992px) {
+  	.name {
+    	width: 700px;
+	}
+	.type {
+		width: 700px;
+	}
+}
+@media (max-width: 767px) {
+  h1 {
+    font-size: 16px;
+  }
+  #month {
+  	font-size: 10px;
+  	color: gray;
+  }
 }
