--- a/Budget/css/style.css
+++ b/Budget/css/style.css
@@ -27,11 +27,23 @@ input {
 	}
 }
 @media (max-width: 767px) {
-  h1 {
-    font-size: 16px;
-  }
-  #month {
-  	font-size: 10px;
-  	color: gray;
-  }
+  	h1 {
+    	font-size: 16px;
+  	}
+  	#month {
+	  	font-size: 10px;
+	  	color: gray;
+  	}
+  	input {
+		width: 30px;
+		height: 30px;
+	}
+	button {
+		width: 30px;
+		height: 30px;
+	}
+	progress {
+		width: 200px;
+		padding: 0px 0px 0px 0px;
+	}
 }
