--- a/Budget/css/style.css
+++ b/Budget/css/style.css
@@ -1,18 +1,96 @@
 body {
-  background-color: #506372;
- }
+	background-color: #506372;
+}
 
- h1 {
- 	color: white;
- 	text-transform: uppercase;
- }
+h1 {
+	color: white;
+	text-transform: uppercase;
+	font-size: 26px;
+	font-weight: bold;
+}
+
+span {
+  	font-size: 10px;
+  	color: gray;		
+}
+
+button {
+	position: relative;
+	float: right;
+	top: -50px;
+	margin-right: 5px;
+	width: 30px;
+	height: 30px;
+ 	background: #5bc3e8;
+    font-weight: bold;
+    color: #FFFFFF;
+    border: solid 1px #73C8F0;
+    cursor: pointer;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 25px;
+    background: -moz-linear-gradient(0% 100% 90deg, #2E8CE3, #5bc3e8);
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#5bc3e8), to(#2E8CE3));
+}
+
+progress {
+/*	background: #888888;*/
+	height: 18px;
+	width: 200px;
+	padding: 0px 0px 0px 0px;
+/*	color: #0063a6;*/
+	font-size: .6em;
+	line-height: 1.5em;
+	text-indent: .5em;
+	border-radius: 9px;
+	border: 1px solid white;
+}
+
+progress::-webkit-progress-bar {
+	background: #F8F1F1;
+	border-radius: 9px;
+	border: 1px solid white;
+}
+
+progress::-webkit-progress-value {
+	background: #888888;
+	border-radius: 9px;
+	border: 1px solid white;
+}
+
+span#span_house > progress::-webkit-progress-value {
+	background: red;
+	border-radius: 9px;
+	border: 1px solid white;
+}
+
+input {
+	font-size: 20px;
+	border: 1px;
+	border-bottom: 1px solid #888888;
+	outline: none; 
+	outline-color: #F8F1F1;
+	height: 20px;
+	width:  30px;
+	color: #cccccc
+}
+
+form {
+	position: absolute;
+}
+
+span {
+  	font-size: 10px;
+  	color: gray;		
+}
+
 .button {
 	position: absolute;
-	left: 280px; 
-	top: 20px;
- }
+	left: 270px; 
+	top: 30px;
+}
+
 .name {
-	font-size: 70%;
 	color: #B1A68C;
 }
 
@@ -22,123 +100,60 @@ body {
 }
 
 .layout section { 
-	position: absolute;
+	position: relative;
+	float: left;
 	border-radius: 9px;
+	margin-left: 20px;
 }
 
 .daily {
 	background-color: white; 
 	height: 80px;
-	width: 500px;
+	width: 400px;
 }
 
 .house {
 	background-color: white;
-	top: 180px;  
 	height: 80px;
-	width: 500px;
+	width: 400px;
 }
 
 .social {
 	background-color: white;
-	top: 280px;  
 	height: 80px;
-	width: 500px;
+	width: 400px;
 }
 
 .sport {
 	background-color: white;
-	top: 380px;  
 	height: 80px;
-	width: 500px;
+	width: 400px;
 }
 
 .style {
 	background-color: white;
-	top: 480px;  
 	height: 80px;
-	width: 500px;
+	width: 400px;
 }
 
 .balance {
 	margin: 10px 0px 20px 20px;
 	padding: 0px 0px 0px 0px;
 }
-button {
-	width: 40px;
-	height: 40px;
- 	background: #5bc3e8;
-    font-weight: bold;
-    color: #FFFFFF;
-    text-align: center;
-    border: solid 1px #73C8F0;
-    cursor: pointer;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 25px;
-    background: -moz-linear-gradient(0% 100% 90deg, #2E8CE3, #5bc3e8);
-    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#5bc3e8), to(#2E8CE3));
-}
-progress {
-/*	background-color: #f3f3f3;*/
-/*border: 0;*/
-	background: #F8F1F1;
-	height: 18px;
-	width: 200px;
-	padding: 0px 0px 0px 0px;
-	color: #0063a6;
-	font-size: .6em;
-	line-height: 1.5em;
-	text-indent: .5em;
-	border-radius: 9px;
-	border: 1px solid white;
-	}
-progress::-webkit-progress-bar {
-	background: #F8F1F1;
-	border-radius: 9px;
-	border: 1px solid white;
-
-}
-progress::-webkit-progress-value {
-	background: #888888;
-	border-radius: 9px;
-	border: 1px solid white;
-}
-
-input {
-	font-size: 20px;
-	width: 30px;
-	border: 0px;
-	border-bottom: 1px solid #888888;
-}
 
 #balance {
-  color: green;
+ 	color: green;
 }
 
-@media (min-width: 992px) {
-  	.name {
-    	width: 700px;
-	}
-	.type {
-		width: 700px;
-	}
+#month {
+	font-size: 10px;
+	color: white;
 }
+
+.title {
+	font-size: 16px;
+}
+
 @media (max-width: 767px) {
-  	h1 {
-    	font-size: 16px;
-		font-weight: bold;
-  	}
-  	#month {
-	  	font-size: 10px;
-	  	color: white;
-  	}
 
-	.title {
-		font-size: 16px;
-	}
-	span {
-	  	font-size: 10px;
-	  	color: gray;		
-	}
 }
