--- a/Web-component/css/style.css
+++ b/Web-component/css/style.css
@@ -1,14 +1,13 @@
 clock-calendar-widget {
-    position: absolute;
+    display: block;
     width: 600px;
-    height: 100px;
+    height: 200px;
     top: 25%;
     left: 25%;
-    background: #DB2A56;;
+    background: #DB2A56;
     color: black;
     text-align: center;
     border: 2px solid black;
-    height: 2em;
     line-height: 2em;
     font-size: 100px;
     font-family: Arial;
